fix: update login component structure and styles for improved functionality and readability

--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -88,6 +88,7 @@
         }
 
         p {
+          font-family: Cinzel, serif;
           font-size: 1.3rem;
           color: rgba(255, 255, 255, 0.9);
           font-weight: 300;
@@ -251,11 +252,7 @@
 
       .form-container {
         .form-header {
-          margin-bottom: 30px;
-
-          h2 {
-            font-size: 1.8rem;
-          }
+          display: none;
         }
       }
     }
